k8s/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-gateway
  namespace: envoy-gateway-system
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: envoy-gateway
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
